--- a/okp.html
+++ b/okp.html
@@ -14,10 +14,11 @@
         thats childish and aggressive for some reason but suprisingly he gets bitches which will remain a mystery to me unlike the the first Ronaldo cock sucker David chidi.
         Also he's muscular and good at maths, shocking right? like that doesnt even add up when have ever seen a muscular meet head with brains, that doesnt happen its... I guess there's always an exception</h1>
     </P>
-    <a href="2index.html"><button>TRUST</button></a>
+    <a href="trust.html"><button>TRUST</button></a>
     </h2>
     <H3>click the button to learn about trust</H3>
 
     
 </body>
+
 </html>
