--- a/trust.html
+++ b/trust.html
@@ -13,9 +13,10 @@
         Trust, he may be slow but he's our favourite gooner that makes us laugh once
         in a while but sometimes can get annoying overall he a nice guy. Wait why am i
         been nice lemme try again.
-        this mf is gooner and gets no hoes like his boyfriend david chidi.
+        this mf is a gooner and gets no hoes like his boyfriend david chidi.
 
     </h1>
     
 </body>
+
 </html>
